--- a/frontend/src/components/search/filters/Filters.scss
+++ b/frontend/src/components/search/filters/Filters.scss
@@ -13,7 +13,7 @@
     margin-bottom: 16px;
   }
 
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     display: block;
   }
 }
